# evocli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/code_intel/src/: file_watcher.rs  lib.rs  lsp_client.rs  ts_indexer.rs
crates/host/: Cargo.toml
crates/host/src/: config.rs  errors.rs  event_bus.rs  fs_tools.rs  git.rs  init.rs  job_queue.rs  lib.rs  logging.rs  main.rs  python_manager.rs  security.rs  tool_dispatch.rs  web_tools.rs
crates/host/src/commands/: config_cmd.rs  constraint_cmd.rs  debug_cmd.rs  doctor_cmd.rs  evolve_cmd.rs  index_cmd.rs  jobs_cmd.rs  lsp_cmd.rs  mcp_cmd.rs  mod.rs  session_cmd.rs  skill_cmd.rs  stats_cmd.rs  tools_cmd.rs
crates/knowledge_graph/src/: bm25_index.rs  context.rs  graph_analysis.rs  hybrid_search.rs  lib.rs
crates/mcp/src/: lib.rs
crates/mem_router/src/: classifier.rs  embedder.rs  labeler.rs  lib.rs  trainer.rs
crates/protocol/src/: lib.rs
crates/soul_bridge/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event_handler.rs  lib.rs  ui.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  IMPROVEMENTS.md  MEMORY_SYSTEM.md  PROTOCOL.md  ROADMAP.md  SKILLS_GUIDE.md  TOOLS_REFERENCE.md  TUI_INTERNALS.md  dataflow.html
evocli-soul/: ruff.toml
evocli-soul/evocli_soul/: agent.py  agent_context.py  agent_execution.py  agent_executor.py  agent_litellm.py  agent_tool_defs.py  agent_tool_selector.py  agent_tools.py  agent_tools_code.py  agent_tools_fs.py  agent_tools_shell.py  auto_commit.py  code_chunks.py  code_intel_tools.py  context_engine.py  context_pruner.py  default_prompts.py  edit_engine.py  evolution_engine.py  history_utils.py  host_bridge.py  intent_profile.py  llm_client.py  local_classifier.py  main.py  mem_router_labeler.py  memory_client.py  memory_distill.py  memory_enhance.py  model_context.py  multi_agent.py  orchestrator.py  skill_engine.py  state.py  tool_flow_miner.py  tool_registry.py  tool_router.py  web_fetcher.py  wiki_generator.py  workflow.py
evocli-soul/evocli_soul/agents/: definitions.py
evocli-soul/evocli_soul/builtin_skills/: bible-engineering.md
evocli-soul/evocli_soul/evolution/: __init__.py  circuit_breaker.py  decay_detector.py  pattern_detector.py  scheduler.py
evocli-soul/evocli_soul/handlers/: agent.py  agent_loop.py  code_analysis.py  edit.py  knowledge.py  mcp_bridge.py  metrics.py  skill.py  system.py  watch.py
evocli-soul/evocli_soul/prompts/: loop_messages.toml
evocli-soul/scripts/: bible_check.py
evocli-soul/tests/: smoke_test.py  test_gap_fixes_wave1.py  test_gap_fixes_wave2.py
evocli-soul/tests/integration/: test_handler_chain.py  test_multi_agent.py
scripts/: build_dist.ps1  setup_dist.ps1  setup_dist.sh
